--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body, html {
     border: solid black 1px;
     animation: mbesar 2800ms, mledak 200ms 2800ms;
     animation-fill-mode: both, forwards;
+    position: absolute;
     box-shadow: 0px 0px 0px transparent;
 }
 
